--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>t</title>
+    <title>cupid</title>
     <link rel="stylesheet" href="./estilo.css" />
 </head>
 <body>
@@ -32,5 +32,8 @@
             <a href="page1.html">Pagina 1</a>
         </li>
     </nav>
+    <li>
+        <a href="formulario.html">Pagina 1</a>
+    </li>
 </body>
 </html>
