--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./estilo.css" />
 </head>
 <body>
+    <h1>INICIO</h1>
     <table>
         <tr>
         <th>Nome</th>
@@ -26,14 +27,16 @@
             <td>2</td>
         </tr>
     </table>
-
     <nav>
         <li>
-            <a href="page1.html">Pagina 1</a>
+            <a href="page1.html">Tabelas</a>
+        </li>
+        <li>
+            <a href="formulario.html">Formulario</a>
+        </li>
+        <li>
+            <a href="ancora.html">Ancora</a>
         </li>
     </nav>
-    <li>
-        <a href="formulario.html">Pagina 1</a>
-    </li>
 </body>
 </html>
