--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./estilo.css" />
 </head>
 <body>
-    <a href="index.html">Voltar</a>
+   <h1>TABELAS</h1>
     <table>
         <tr>
             <td>1</td>
@@ -62,6 +62,6 @@
              </tr>
            </tr>
        </table>
-
+       <a href="index.html">Voltar</a>
 </body>
 </html>
